# ursus-solver-strategies

./: .gitignore  README.md  _CoqProject  autogenerate.cpp  clear_gen.sh  dune-project  plot.sh  run_experiments.sh  trilis-master.opam
plots/: all.txt  basic.txt  bottomup_naive.txt  bottomup_reductions.txt  native.txt  plot.sh  topdown.txt  winners.txt
src/: CommonProofs.v  CommonTactics.v  Main.v  SpecLang.v  dune
src/If/: CommonAdmits.v  CommonContractTactics.v  CommonLemmas.v  If.v  Run.v  Run1.v
src/If/Proofs/: hash_1.v  hash_10.v  hash_2.v  hash_3.v  hash_4.v  hash_5.v  hash_6.v  hash_7.v  hash_8.v  hash_9.v  native_cbv.v  native_contractions_cbv.v  native_contractions_lazy.v  native_contractions_strong_cbv.v  native_contractions_strong_lazy.v  native_contractions_strong_typebased_cbv.v  native_contractions_strong_typebased_lazy.v  native_contractions_typebased_cbv.v  native_contractions_typebased_lazy.v  native_lazy.v  topdown_cbv.v  topdown_contractions_cbv.v  topdown_contractions_lazy.v  topdown_contractions_strong_cbv.v  topdown_contractions_strong_lazy.v  topdown_contractions_strong_typebased_cbv.v  topdown_contractions_strong_typebased_lazy.v  topdown_contractions_typebased_cbv.v  topdown_contractions_typebased_lazy.v  topdown_lazy.v
src/If/_Proofs/: hash_1.v  hash_10.v  hash_2.v  hash_3.v  hash_4.v  (+5 more)
src/IfAndRecursion/: CommonAdmits.v  CommonContractTactics.v  CommonLemmas.v  IfAndRecursion.v  Run.v  Run1.v
src/Recursion/: CommonAdmits.v  CommonContractTactics.v  CommonLemmas.v  Recursion.v  Run.v  Run1.v
src/Simple/: CommonAdmits.v  CommonContractTactics.v  CommonLemmas.v  Run.v  Run1.v  Simple.v
src/SimpleContract/: CommonAdmits.v  CommonContractTactics.v  Run1.v  SimpleContract.v
(+153 files in other folders)
