synopsis:     "Experiments for masters dissertation of @trilis"
description:  "Comparing term reduction strategies (solvers)"
name:         "trilis-master"
opam-version: "2.0"
maintainer:   "team@pruvendo.com"
authors:      "Pruvendo Team"
homepage:     "git@vcs.modus-ponens.com:ton/trilis-master.git"
dev-repo:     "git+https://github.com/Pruvendo/opam-repo.git"
bug-reports:  "git@vcs.modus-ponens.com:ton/trilis-master.git"
doc:          "https://vcs.modus-ponens.com/ton/trilis-master"

license:      "GPL-3.0-or-later"

depends: [
  "coq"           { >= "8.15.0" }
  "dune"          { >= "2.8.0"  }
  "coq-elpi"
  "pruvendo-base" { >= "0.2.0" }
  "pruvendo-base-lib" { >= "0.1.0" }
  "pruvendo-umlang" 
  "ursus-standard-library"
  "pruvendo-ursus-tvm"
  "ursus-contract-creator"
  "ursus-environment"
  "ursus-quickchick"
  "ursus-lib-execs"
]

pin-depends: [
  [ "coq-elpi.latest-git" "../coq-elpi-mod#experimental"]
  [ "pruvendo-base.latest-git" "../coq-finproof-base#master" ]
  [ "pruvendo-base-lib.latest-git" "../pruvendo-base-lib#master" ]
  [ "pruvendo-umlang.latest-git" "../solidity-monadic-language#new_structure_new_order" ]
  [ "ursus-standard-library.latest-git" "../ursus-standard-library#new_structure_new_order" ]  
  [ "pruvendo-ursus-tvm.latest-git" "../pruvendo-ursus-tvm#new_structure_new_order" ]  
  [ "ursus-contract-creator.latest-git" "../ursus-contract-creator#new_structure_new_order" ]
  [ "ursus-environment.latest-git" "../ursus-environment#new_structure_new_order" ]
  [ "ursus-quickchick.latest-git" "../ursus-quickchick/main"]
]

build: [ "dune" "build" "-p" name "-j" jobs ]
